--- a/tutorial_notebooks/tutorial007.ipynb
+++ b/tutorial_notebooks/tutorial007.ipynb
@@ -126,10 +126,7 @@
    "source": [
     "# complex data types (e.g. complex numbers)\n",
     "a = 1.5 + 0.5j\n",
-    "type(a)\n",
-    "\n",
-    "print(a.real) # real part of `a` (ASK)\n",
-    "print(a.imag) # imaginary part of `a` (ASK)"
+    "type(a)"
    ]
   },
   {
@@ -319,7 +316,7 @@
     "\n",
     "# print sum and types of vars\n",
     "print(sum)\n",
-    "print(type(myFloat), type(myInt), type(sum)) # ASK"
+    "print(type(myFloat), type(myInt), type(sum))"
    ]
   },
   {
@@ -659,7 +656,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(3.33 * 3.33 * 3.33) # ASK"
+    "print(3.33 * 3.33 * 3.33)"
    ]
   },
   {
