--- a/tutorial_notebooks/tutorial007.ipynb
+++ b/tutorial_notebooks/tutorial007.ipynb
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
      "output_type": "stream",
      "text": [
       "(6.1+3.2j)\n",
-      "<class 'float'> <class 'complex'> <class 'float'>\n"
+      "<class 'float'> <class 'complex'> <class 'complex'>\n"
      ]
     }
    ],
@@ -350,7 +350,7 @@
     "\n",
     "# print sum and types of vars\n",
     "print(sum2)\n",
-    "print(type(myFloat2), type(myComplex), type(sum))"
+    "print(type(myFloat2), type(myComplex), type(sum2))"
    ]
   },
   {
@@ -402,7 +402,7 @@
    "source": [
     "What happens if you define a new variable a using the word false (without uppercase)?\n",
     "\n",
-    "The program will run into an error (name 'false' is not defined). You would either have to define the variable with a uppercase False to create a boolean variable or use all lower case with quotatations (i.e. \"false\") to create a string variable."
+    "The program will run into an error (name 'false' is not defined). You would have to define the variable with an uppercase False to define a boolean variable."
    ]
   },
   {
@@ -518,7 +518,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The variable that stores of a boolean and an int is an integer type because int is the more \"complex\" (i.e. requires more memory) than a boolean type. Note that True is coded as 1 and False is coded as 0, so the addition will use these numerical values when adding."
+    "The sum of a boolean and an int is an integer type because int is the more \"complex\" (i.e. requires more memory) than a boolean type. Note that True is coded as 1 and False is coded as 0, so the addition will use these numerical values when adding."
    ]
   },
   {
