--- a/tutorial_notebooks/tutorial007-introToBasicPython.ipynb
+++ b/tutorial_notebooks/tutorial007-introToBasicPython.ipynb
@@ -758,7 +758,7 @@
     "# sum bool and int\n",
     "sum3 = a + b\n",
     "\n",
-    "# print out type of sum of bool and int\n",
+    "# print out value and type of sum\n",
     "print(sum3, type(sum3))"
    ]
   },
@@ -767,7 +767,7 @@
    "id": "6ecd3290",
    "metadata": {},
    "source": [
-    "[Describe here, using your own words what happened above and why it happened.]"
+    "The sum of a boolean and an int is an integer type because int is the more \"complex\" (i.e. requires more memory) than a boolean type. Note that True is coded as 1 and False is coded as 0, so the addition will use these numerical values when adding."
    ]
   },
   {
@@ -991,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "id": "495322ca",
    "metadata": {},
    "outputs": [
