--- a/tutorial_notebooks/tutorial008-AdvancedDataTypesContainers.ipynb
+++ b/tutorial_notebooks/tutorial008-AdvancedDataTypesContainers.ipynb
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "id": "97b35ac1",
    "metadata": {},
    "outputs": [
@@ -552,7 +552,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [54]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mmytuple\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mappend\u001b[49m(\u001b[38;5;241m4\u001b[39m)\n",
+      "Input \u001b[1;32mIn [15]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mmytuple\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mappend\u001b[49m(\u001b[38;5;241m4\u001b[39m)\n",
       "\u001b[1;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'append'"
      ]
     }
@@ -577,7 +577,7 @@
     "$\\color{blue}{\\text{Answer the following questions.}}$\n",
     "\n",
     "  - How many methods does a `Tuple` have?\n",
-    "  3\n",
+    "  2\n",
     "  \n",
     "  - Which methods does a `List` have?\n",
     "      1. append()\n",
@@ -587,11 +587,10 @@
     "      5. extend()\n",
     "      6. index()\n",
     "      7. insert()\n",
-    "      8. mro()\n",
-    "      9. pop()\n",
-    "      10. remove()\n",
-    "      11. reverse()\n",
-    "      12. sort()  "
+    "      8. pop()\n",
+    "      9. remove()\n",
+    "      10. reverse()\n",
+    "      11. sort()  "
    ]
   },
   {
@@ -614,7 +613,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'D', 'A', 'C', 'B'}\n"
+      "{'D', 'B', 'A', 'C'}\n"
      ]
     },
     {
@@ -644,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 17,
    "id": "c592826c",
    "metadata": {},
    "outputs": [
@@ -653,7 +652,7 @@
      "evalue": "invalid syntax (2695908684.py, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [55]\u001b[1;36m\u001b[0m\n\u001b[1;33m    myset{1} # error\u001b[0m\n\u001b[1;37m         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  Input \u001b[1;32mIn [17]\u001b[1;36m\u001b[0m\n\u001b[1;33m    myset{1} # error\u001b[0m\n\u001b[1;37m         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -671,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 18,
    "id": "acf15a3c",
    "metadata": {},
    "outputs": [
@@ -680,7 +679,7 @@
      "evalue": "invalid syntax (556754615.py, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [56]\u001b[1;36m\u001b[0m\n\u001b[1;33m    myset{2} = \"F\" # error\u001b[0m\n\u001b[1;37m         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  Input \u001b[1;32mIn [18]\u001b[1;36m\u001b[0m\n\u001b[1;33m    myset{2} = \"F\" # error\u001b[0m\n\u001b[1;37m         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -743,7 +742,7 @@
     "\n",
     "  - In the line above I changed the element of `mylist` indexed by the number `3`, why did that operation change the last element in the list?\n",
     "  \n",
-    "  List use a 0-based index, meaning that the first element is located at index of 0, the next element is located at index of 1, etc. Thus, the last element in the list (i.e. 4th element) is located at index of 3."
+    "  List use a 0-based index, meaning that the first element is located at index of 0, the next element is located at index of 1, etc. Thus, the last element in the list (i.e. 4th element) is located at index of 3, and this index can be used to access and change the last element."
    ]
   },
   {
@@ -766,7 +765,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'D', 'A', 'C', 'B'}\n"
+      "{'D', 'B', 'A', 'C'}\n"
      ]
     }
    ],
@@ -792,8 +791,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'G', 'F', 'E'}\n",
-      "{'A', 'G', 'F', 'E', 'D', 'C', 'B'}\n"
+      "{'E', 'G', 'F'}\n",
+      "{'E', 'C', 'G', 'D', 'B', 'F', 'A'}\n"
      ]
     }
    ],
@@ -822,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 23,
    "id": "a8e73aa4",
    "metadata": {},
    "outputs": [
@@ -841,7 +840,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [53]\u001b[0m, in \u001b[0;36m<cell line: 8>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmylist2: \u001b[39m\u001b[38;5;124m\"\u001b[39m, mylist2)\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# try creating union of two lists\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m mylist3 \u001b[38;5;241m=\u001b[39m \u001b[43mmylist\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43munion\u001b[49m(mylist2) \u001b[38;5;66;03m# error\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(list_union_final)\n",
+      "Input \u001b[1;32mIn [23]\u001b[0m, in \u001b[0;36m<cell line: 8>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmylist2: \u001b[39m\u001b[38;5;124m\"\u001b[39m, mylist2)\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# try creating union of two lists\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m mylist3 \u001b[38;5;241m=\u001b[39m \u001b[43mmylist\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43munion\u001b[49m(mylist2) \u001b[38;5;66;03m# error\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(list_union_final)\n",
       "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'union'"
      ]
     }
@@ -883,7 +882,7 @@
      "output_type": "stream",
      "text": [
       "[1, 'a', 2.1]\n",
-      "{3, 'b', 4.5}\n"
+      "{3, 4.5, 'b'}\n"
      ]
     }
    ],
@@ -1707,6 +1706,14 @@
     "print(\"Tuples: \", tuples_letters)\n",
     "print(\"Sets: \", sets_letters)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0394a43a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
