--- a/tutorial_notebooks/tutorial009-ControlFlowOne-Loops.ipynb
+++ b/tutorial_notebooks/tutorial009-ControlFlowOne-Loops.ipynb
@@ -271,15 +271,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "fbb08e9e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (4050162627.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [5]\u001b[1;36m\u001b[0m\n\u001b[1;33m    root = i**0.5  # remember, the double splat, \"**\", means \"raise to the power of\"\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
-    "#for i in input_list :    \n",
-    "#root = i**0.5  # remember, the double splat, \"**\", means \"raise to the power of\"\n",
-    "#print('The square root of ', i, ' is ', root)\n",
-    "#print('Now the loop is over.')"
+    "for i in input_list :    \n",
+    "root = i**0.5  # remember, the double splat, \"**\", means \"raise to the power of\"\n",
+    "print('The square root of ', i, ' is ', root)\n",
+    "print('Now the loop is over.')"
    ]
   },
   {
@@ -300,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "a46eb55e",
    "metadata": {
     "scrolled": true
@@ -360,17 +369,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "b6882e72",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (3813621487.py, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [7]\u001b[1;36m\u001b[0m\n\u001b[1;33m    print('Now the loop is over.')\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
    "source": [
     "aList = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-    "#for i in aList :    \n",
-    "#    root = i**0.5\n",
-    "#print('The square root of ', i, ' is ', root)\n",
+    "for i in aList :    \n",
+    "    root = i**0.5\n",
+    "print('The square root of ', i, ' is ', root)\n",
     "\n",
-    "    #print('Now the loop is over.')"
+    "    print('Now the loop is over.')"
    ]
   },
   {
@@ -383,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "c233ad1a",
    "metadata": {},
    "outputs": [
@@ -428,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "c8d888d0",
    "metadata": {},
    "outputs": [
@@ -436,21 +454,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The root of  2  is  4\n",
-      "The root of  4  is  16\n",
-      "The root of  6  is  36\n",
-      "The root of  8  is  64\n",
-      "The root of  10  is  100\n"
+      "The square of  2  is  4\n",
+      "The square of  4  is  16\n",
+      "The square of  6  is  36\n",
+      "The square of  8  is  64\n",
+      "The square of  10  is  100\n"
      ]
     }
    ],
    "source": [
     "myEvens = [2, 4, 6, 8, 10]\n",
     "\n",
-    "# loop through list and square each\n",
+    "# loop through list of even numbers and square each\n",
     "for i in myEvens:\n",
     "    squared = i**2\n",
-    "    print('The root of ', i, ' is ', squared)"
+    "    print('The square of ', i, ' is ', squared)"
    ]
   },
   {
@@ -477,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "56299dae",
    "metadata": {},
    "outputs": [
@@ -508,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "d9bd1bcc",
    "metadata": {},
    "outputs": [
@@ -535,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "65fd103b",
    "metadata": {},
    "outputs": [
@@ -567,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "d5094fee",
    "metadata": {},
    "outputs": [
@@ -577,7 +595,7 @@
        "range(0, 5)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "a155f1ed",
    "metadata": {},
    "outputs": [
@@ -599,7 +617,7 @@
        "range"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "657916c2",
    "metadata": {},
    "outputs": [
@@ -692,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "ac6287ce",
    "metadata": {},
    "outputs": [
@@ -711,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "8a105156",
    "metadata": {},
    "outputs": [
@@ -762,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "25fb43f4",
    "metadata": {},
    "outputs": [
@@ -842,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "80c7553c",
    "metadata": {},
    "outputs": [
@@ -892,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "9573012f",
    "metadata": {},
    "outputs": [
@@ -940,14 +958,14 @@
    "source": [
     "$\\color{blue}{\\text{Complete the following exercise.}}$\n",
     "\n",
-    "  - Write a `while` loop to multiply the first 10 numbers starting at 0, but exit the look if the output of the multiplication is more than 50 . Print each value and a message when breaking out of the loop.\n",
+    "  - Write a `while` loop to multiply the first 10 numbers starting at 0, but exit the loop if the output of the multiplication is more than 50 . Print each value and a message when breaking out of the loop.\n",
     "  \n",
     "  [Use the cell below to show your code]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "id": "fa7bc40e",
    "metadata": {},
    "outputs": [
@@ -955,31 +973,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The current multiple of two consecutive number is  0 (counter is 1 )\n",
-      "The current multiple of two consecutive number is  2 (counter is 2 )\n",
-      "The current multiple of two consecutive number is  6 (counter is 3 )\n",
-      "The current multiple of two consecutive number is  12 (counter is 4 )\n",
-      "The current multiple of two consecutive number is  20 (counter is 5 )\n",
-      "The current multiple of two consecutive number is  30 (counter is 6 )\n",
-      "The current multiple of two consecutive number is  42 (counter is 7 )\n",
+      "The current multiple of two consecutive numbers is  0 (counter is 1 )\n",
+      "The current multiple of two consecutive numbers is  2 (counter is 2 )\n",
+      "The current multiple of two consecutive numbers is  6 (counter is 3 )\n",
+      "The current multiple of two consecutive numbers is  12 (counter is 4 )\n",
+      "The current multiple of two consecutive numbers is  20 (counter is 5 )\n",
+      "The current multiple of two consecutive numbers is  30 (counter is 6 )\n",
+      "The current multiple of two consecutive numbers is  42 (counter is 7 )\n",
       "break out of loop\n"
      ]
     }
    ],
    "source": [
     "counter = 1\n",
-    "currentNum = 0\n",
+    "currentMult = 0\n",
     "maxNum = 10\n",
     "breakCondition = 50\n",
     "\n",
     "# calculate multiple of two consecutive numbers, iterating through 0~10\n",
-    "while counter < maxNum:\n",
-    "    currentNum *= counter\n",
-    "    if currentNum > breakCondition: # if culmulative multiple greater 50, break\n",
+    "while counter <= maxNum:\n",
+    "    currentMult *= counter\n",
+    "    if currentMult > breakCondition: # if culmulative multiple greater 50, break\n",
     "        print(\"break out of loop\")\n",
     "        break\n",
-    "    print('The current multiple of two consecutive number is ', currentNum, '(counter is',counter,')')\n",
-    "    currentNum = counter # update currentNum to counter, before updating counter\n",
+    "    print('The current multiple of two consecutive numbers is ', currentMult, '(counter is',counter,')')\n",
+    "    currentMult = counter # update currentNum to counter, before updating counter\n",
     "    counter += 1 # update counter"
    ]
   },
@@ -993,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "id": "643f8969",
    "metadata": {},
    "outputs": [
@@ -1045,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "id": "6e76858a",
    "metadata": {},
    "outputs": [
@@ -1101,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "id": "dbcd5ef0",
    "metadata": {},
    "outputs": [
@@ -1133,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "e5773c7b",
    "metadata": {},
    "outputs": [
@@ -1158,7 +1176,7 @@
     "B = 101\n",
     "maxNum = 110\n",
     "\n",
-    "# find sum at elements 101~110\n",
+    "# find sum at range of 101~110\n",
     "while B <= maxNum:\n",
     "    OUT = B + B # sum = 2*B\n",
     "    print('The current sum at element ', B, ' is ', OUT)\n",
@@ -1170,15 +1188,7 @@
    "id": "49702add",
    "metadata": {},
    "source": [
-    "[Use this cell to describe in your own words which code seems to be more complex and why]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9183c2e6",
-   "metadata": {},
-   "source": [
-    "The first code is more complex because it requires an extra variable (A) that isn't needed for the second code. This is because for the first code, you are using a list, which requires a variable that will serve as the index to access the values within it. On the other hand, the second code doesn't use a list, and can simply iterate through a range of variables (B ranged from 101 to 110 when the while loop ran). "
+    "The first code is more complex because it requires an extra variable (A) that isn't needed for the second code. This is because for the first code, you are using a list, which requires a variable that will track the indices (so that you can access the values within a list). On the other hand, the second code doesn't use a list, and can simply iterate through a range of variables (B ranged from 101 to 110 when the while loop ran). "
    ]
   },
   {
