--- a/tutorial_notebooks/tutorial010-ControlFlowTwo-IFLogic.ipynb
+++ b/tutorial_notebooks/tutorial010-ControlFlowTwo-IFLogic.ipynb
@@ -1009,15 +1009,18 @@
    "source": [
     "| Name of operation| Command | Location | Description |\n",
     "| :----------- | :----------- | :----------- | :------- |\n",
-    "| Sync forked repository | Synch fork | Forked FDS-CourseOne directory on GitHub.com | Sync the forked repository with main folder to update the forked repository|\n",
-    "| Check status of git repository | git status | Windows Powershell | Check status of git repository|\n",
-    "| Pull request | git pull | Windows Powershell | Update the forked repository on the local computer with the updates on GitHub.com |\n",
-    "| Copy Item | cp -v \"[FILENAME]\" ../PythonTutorials | Windows Powershell | Copy the tutorial into PythonTutorials folder so that you can edit it|\n",
-    "| Run Jupyter Notebook | juypter notebook | Windows Anaconda Powershell Prompt | Runs and opens Jupyter Notebook |\n",
-    "| Open, edit, and complete tutorial | ?? | Local computer | Edit and complete tutorial as needed |\n",
-    "| Run Jupyter Notebook | git status | Powershell Prompt | Once the changes to the tutorial is ready to be commited, commit the changes |\n",
-    "| Pull request | git add | Windows Powershell | Update the forked repository on the local computer with the updates on GitHub.com |\n",
-    "| Pull request | git pull | Windows Powershell | Update the forked repository on the local computer with the updates on GitHub.com |"
+    "| Sync repository | `synch fork` | GitHub.com | Sync the forked repository with main FDS-CourseOne folder|\n",
+    "| Check status of git repository | `git status` | Windows Powershell | Check status of git repository|\n",
+    "| Pull request | `git pull` | Windows Powershell | Update the forked repository on the local computer to match changes on GitHub.com |\n",
+    "| Copy Item | `cp -v \"[FILENAME]\" ../PythonTutorials` | Windows Powershell | Copy the tutorial into PythonTutorials folder so that you can edit it|\n",
+    "| Add | `git add [FILENAME]` | Windows Powershell | Add tutorial file |\n",
+    "| Commit | `git commit -am \"[description of changes you've made]` | Windows Powershell | Commit changes to file |\n",
+    "| Push | `git push` | Windows Powershell | Push changes to directory on GitHub.com|\n",
+    "| Run Jupyter Notebook | `juypter notebook` | Windows Anaconda Powershell Prompt | Run and open Jupyter Notebook |\n",
+    "| Open, edit, and complete tutorial | Navigate through file system | Local computer | Edit and complete tutorial as needed |\n",
+    "| Add | `git add` | Windows Powershell | Once you've made some changes to the tutorial, add the changes |\n",
+    "| Commit | `git commit -am \"[description of changes you've made]`  | Windows Powershell | Commit changes to file |\n",
+    "| Push | `git push` | Windows Powershell | Push changes to directory on GitHub.com|"
    ]
   },
   {
