--- a/tutorial_notebooks/tutorial010-ControlFlowTwo-IFLogic.ipynb
+++ b/tutorial_notebooks/tutorial010-ControlFlowTwo-IFLogic.ipynb
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "6881fe80",
    "metadata": {},
    "outputs": [
@@ -433,13 +433,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "False\n",
       "Too cold! I will take the car or walk.\n"
      ]
     }
    ],
    "source": [
     "current_temp = 45\n",
-    "if not( (current_temp >= 90) or (current_temp <= 50) ) : # WHAT'S THE NOT OPERATOR??\n",
+    "print(True !=True)\n",
+    "if not( (current_temp >= 90) or (current_temp <= 50) ) : # NOT OPERATOR vs. !\n",
     "    print('I will ride my bicycle to school!')\n",
     "else :\n",
     "    print('Too cold! I will take the car or walk.')"
@@ -459,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "af350e32",
    "metadata": {},
    "outputs": [
@@ -467,23 +469,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "Eat cake today? False\n"
      ]
     }
    ],
    "source": [
     "eatCake = False # will we eat cake today?\n",
     "numCakeToday = 0 # number of cake slices eaten today\n",
-    "numCake1DayAgo = 0  # number of cake slices eaten yesterday\n",
+    "numCake1DayAgo = 4 # number of cake slices eaten yesterday\n",
     "numCake2DaysAgo = 0  # number of cake slices eaten 2 days ago\n",
     "\n",
     "# eat cake today only if we ate less than 2 slices today and none the past two days\n",
-    "if (numCakeToday < 2 and numCake1DayAgo == 0 and numCake2DaysAgo == 0): # MORE EFFICIENT WAY OF DOING??\n",
+    "if (numCakeToday < 2 and numCake1DayAgo == 0 and numCake2DaysAgo == 0):\n",
     "    eatCake = True\n",
     "else:\n",
     "    eatCake = False\n",
     "    \n",
-    "print(eatCake)"
+    "print(\"Eat cake today?\", eatCake)"
    ]
   },
   {
@@ -516,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "2e7971d8",
    "metadata": {},
    "outputs": [],
@@ -537,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "ac5b3a01",
    "metadata": {},
    "outputs": [
@@ -547,7 +549,7 @@
        "True"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "3e356893",
    "metadata": {},
    "outputs": [
@@ -576,7 +578,7 @@
        "True"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "60f940f3",
    "metadata": {},
    "outputs": [
@@ -605,7 +607,7 @@
        "True"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "9aea94b6",
    "metadata": {},
    "outputs": [
@@ -634,7 +636,7 @@
        "False"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "d396d15b",
    "metadata": {},
    "outputs": [
@@ -674,7 +676,7 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,12 +702,12 @@
     "  \n",
     "  - What is `CA_temp`? \n",
     "  \n",
-    "  `CA_temp` is a variable that holds a temporary value for the average number of cake slices eaten in Canada and currently stores the value `1`.\n"
+    "  `CA_temp` is a variable that holds a temporary value for the average number of cake slices eaten in Canada, and act as a placeholder to test various operations. It currently stores the value `1`.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "id": "d0f2bd04",
    "metadata": {},
    "outputs": [
@@ -735,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "id": "2e442d2d",
    "metadata": {},
    "outputs": [
@@ -745,7 +747,7 @@
        "False"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "id": "8ca7b2b6",
    "metadata": {},
    "outputs": [
@@ -774,7 +776,7 @@
        "True"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "id": "6fcc8c83",
    "metadata": {},
    "outputs": [
@@ -803,7 +805,7 @@
        "False"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -837,11 +839,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "6d22b002",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2  is smaller than  3\n",
+      "4  is greater than 1\n",
+      "20  is equal to 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "firstNum = [2, (2**2), (4*5)]\n",
+    "secondNum = [3, (1**1), 20]\n",
+    "\n",
+    "for i in range(len(firstNum)):\n",
+    "    if (firstNum[i] < secondNum[i]):\n",
+    "        print(firstNum[i], \" is smaller than \", secondNum[i])\n",
+    "    elif (firstNum[i] > secondNum[i]):\n",
+    "        print(firstNum[i], \" is greater than\", secondNum[i])\n",
+    "    else:\n",
+    "        print(firstNum[i], \" is equal to\", secondNum[i])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -853,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 22,
    "id": "545dbce7",
    "metadata": {},
    "outputs": [
@@ -880,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "id": "cae6c77e",
    "metadata": {},
    "outputs": [
@@ -890,7 +913,7 @@
        "10"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 28,
    "id": "8e8e9b83",
    "metadata": {},
    "outputs": [
@@ -919,13 +942,13 @@
        "79"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "myList[len(myList)-1]"
+    "myList[-1]"
    ]
   },
   {
@@ -938,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 31,
    "id": "1e2aeb00",
    "metadata": {},
    "outputs": [
@@ -948,13 +971,13 @@
        "[10, 35, 59, 20, 1]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "myList[0:len(myList)-2]"
+    "myList[:-2]"
    ]
   },
   {
@@ -967,23 +990,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 32,
    "id": "d9aef5aa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[10, 35, 59, 20, 1, 98, 79]"
+       "[10, 59, 1, 79]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "myList[0:len(myList)]"
+    "myList[::2]"
    ]
   },
   {
@@ -1009,18 +1032,21 @@
    "source": [
     "| Name of operation| Command | Location | Description |\n",
     "| :----------- | :----------- | :----------- | :------- |\n",
-    "| Sync repository | `synch fork` | GitHub.com | Sync the forked repository with main FDS-CourseOne folder|\n",
-    "| Check status of git repository | `git status` | Windows Powershell | Check status of git repository|\n",
-    "| Pull request | `git pull` | Windows Powershell | Update the forked repository on the local computer to match changes on GitHub.com |\n",
+    "| Sync repository | synch fork button | GitHub.com | Sync the forked repository (located under your username) with the original FDS-CourseOne directory|\n",
+    "| Navigate to the cloned local repository | `cd [FILEPATH]` | Windows Powershell | Using the `cd` command, navigate to your cloned local FDS-CourseOne directory|\n",
+    "| Check status of git repository | `git status` | Windows Powershell | Check status of the local git repository (optional)|\n",
+    "| Pull request | `git pull` | Windows Powershell | Update the cloned local repository to match changes that occured on the forked repository on GitHub.com |\n",
     "| Copy Item | `cp -v \"[FILENAME]\" ../PythonTutorials` | Windows Powershell | Copy the tutorial into PythonTutorials folder so that you can edit it|\n",
+    "| Navigate to PythonTutorials | `cd [FILEPATH]` | Windows Powershell | Using the `cd` command, navigate to the PythonTutorials directory where your newly added tutorial is located|\n",
     "| Add | `git add [FILENAME]` | Windows Powershell | Add tutorial file |\n",
-    "| Commit | `git commit -am \"[description of changes you've made]` | Windows Powershell | Commit changes to file |\n",
+    "| Commit | `git commit -am \"[description of changes you've made]\"` | Windows Powershell | Commit changes to file |\n",
     "| Push | `git push` | Windows Powershell | Push changes to directory on GitHub.com|\n",
     "| Run Jupyter Notebook | `juypter notebook` | Windows Anaconda Powershell Prompt | Run and open Jupyter Notebook |\n",
-    "| Open, edit, and complete tutorial | Navigate through file system | Local computer | Edit and complete tutorial as needed |\n",
-    "| Add | `git add` | Windows Powershell | Once you've made some changes to the tutorial, add the changes |\n",
-    "| Commit | `git commit -am \"[description of changes you've made]`  | Windows Powershell | Commit changes to file |\n",
-    "| Push | `git push` | Windows Powershell | Push changes to directory on GitHub.com|"
+    "| Open, edit, and complete tutorial | Navigate through the file system on Jupyter Notebook and open tutorial | Local computer (Jupyter Notebook) | Navigate via clicking and once the tutorial is opened, edit and complete it as appropriate |\n",
+    "| Add and commit | `git commit -am \"[description of changes you've made]`  | Windows Powershell | Commit changes to file |\n",
+    "| Push | `git push` | Windows Powershell | Push changes to the PythonTutorials directory on GitHub.com|\n",
+    "| Create PDF | Ctrl + P | Local computer (Juypter Notebook) | Make sure all code blocks are executed, and create PDF of the tutorial for submission|\n",
+    "| Submit | Submit URL and PDF file | Canvas | Submit GitHub.com URL and PDF of the tutorial on Canvas |"
    ]
   },
   {
