--- a/tutorial_notebooks/tutorial010-ControlFlowTwo-IFLogic.ipynb
+++ b/tutorial_notebooks/tutorial010-ControlFlowTwo-IFLogic.ipynb
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "af350e32",
    "metadata": {},
    "outputs": [
@@ -469,23 +469,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Eat cake today? False\n"
+      "Let's eat soup today\n"
      ]
     }
    ],
    "source": [
-    "eatCake = False # will we eat cake today?\n",
     "numCakeToday = 0 # number of cake slices eaten today\n",
     "numCake1DayAgo = 4 # number of cake slices eaten yesterday\n",
     "numCake2DaysAgo = 0  # number of cake slices eaten 2 days ago\n",
     "\n",
     "# eat cake today only if we ate less than 2 slices today and none the past two days\n",
     "if (numCakeToday < 2 and numCake1DayAgo == 0 and numCake2DaysAgo == 0):\n",
-    "    eatCake = True\n",
+    "    print(\"Yes! We will eat cake today.\")\n",
     "else:\n",
-    "    eatCake = False\n",
-    "    \n",
-    "print(\"Eat cake today?\", eatCake)"
+    "    print(\"Let's eat soup today\")"
    ]
   },
   {
