--- a/tutorial_notebooks/tutorial010-ControlFlowTwo-IFLogic.ipynb
+++ b/tutorial_notebooks/tutorial010-ControlFlowTwo-IFLogic.ipynb
@@ -1040,8 +1040,9 @@
     "| Push | `git push` | Windows Powershell | Push changes to directory on GitHub.com|\n",
     "| Run Jupyter Notebook | `juypter notebook` | Windows Anaconda Powershell Prompt | Run and open Jupyter Notebook |\n",
     "| Open, edit, and complete tutorial | Navigate through the file system on Jupyter Notebook and open tutorial | Local computer (Jupyter Notebook) | Navigate via clicking and once the tutorial is opened, edit and complete it as appropriate |\n",
-    "| Add and commit | `git commit -am \"[description of changes you've made]`  | Windows Powershell | Commit changes to file |\n",
+    "| Add and commit | `git commit -am \"[description of changes you've made]\"`  | Windows Powershell | Commit changes to file |\n",
     "| Push | `git push` | Windows Powershell | Push changes to the PythonTutorials directory on GitHub.com|\n",
+    "| Check status of git repository | `git status` | Windows Powershell | Check status of the local git repository (optional)|\n",
     "| Create PDF | Ctrl + P | Local computer (Juypter Notebook) | Make sure all code blocks are executed, and create PDF of the tutorial for submission|\n",
     "| Submit | Submit URL and PDF file | Canvas | Submit GitHub.com URL and PDF of the tutorial on Canvas |"
    ]
