--- a/tutorial_notebooks/tutorial010-ControlFlowTwo-IFLogic.ipynb
+++ b/tutorial_notebooks/tutorial010-ControlFlowTwo-IFLogic.ipynb
@@ -1036,7 +1036,7 @@
     "| Copy Item | `cp -v \"[FILENAME]\" ../PythonTutorials` | Windows Powershell | Copy the tutorial into PythonTutorials folder so that you can edit it|\n",
     "| Navigate to PythonTutorials | `cd [FILEPATH]` | Windows Powershell | Using the `cd` command, navigate to the PythonTutorials directory where your newly added tutorial is located|\n",
     "| Add | `git add [FILENAME]` | Windows Powershell | Add tutorial file |\n",
-    "| Commit | `git commit -am \"[description of changes you've made]\"` | Windows Powershell | Commit changes to file |\n",
+    "| Commit | `git commit -m \"[description of changes you've made]\"` | Windows Powershell | Commit changes to file |\n",
     "| Push | `git push` | Windows Powershell | Push changes to directory on GitHub.com|\n",
     "| Run Jupyter Notebook | `juypter notebook` | Windows Anaconda Powershell Prompt | Run and open Jupyter Notebook |\n",
     "| Open, edit, and complete tutorial | Navigate through the file system on Jupyter Notebook and open tutorial | Local computer (Jupyter Notebook) | Navigate via clicking and once the tutorial is opened, edit and complete it as appropriate |\n",
