--- a/tutorial_notebooks/tutorial010-ControlFlowTwo-IFLogic.ipynb
+++ b/tutorial_notebooks/tutorial010-ControlFlowTwo-IFLogic.ipynb
@@ -1034,13 +1034,13 @@
     "| Check status of git repository | `git status` | Windows Powershell | Check status of the local git repository (optional)|\n",
     "| Pull request | `git pull` | Windows Powershell | Update the cloned local repository to match changes that occured on the forked repository on GitHub.com |\n",
     "| Copy Item | `cp -v \"[FILENAME]\" ../PythonTutorials` | Windows Powershell | Copy the tutorial into PythonTutorials folder so that you can edit it|\n",
-    "| Navigate to PythonTutorials | `cd [FILEPATH]` | Windows Powershell | Using the `cd` command, navigate to the PythonTutorials directory where your newly added tutorial is located|\n",
+    "| Navigate to PythonTutorials directory | `cd [FILEPATH]` | Windows Powershell | Using the `cd` command, navigate to the PythonTutorials directory where your newly added tutorial is located|\n",
     "| Add | `git add [FILENAME]` | Windows Powershell | Add changes from tutorial file |\n",
     "| Commit | `git commit -m \"[description of changes you've made]\"` | Windows Powershell | Commit changes from file |\n",
     "| Push | `git push` | Windows Powershell | Push changes to directory on GitHub.com|\n",
     "| Run Jupyter Notebook | `juypter notebook` | Windows Anaconda Powershell Prompt | Run and open Jupyter Notebook |\n",
-    "| Open, edit, and complete tutorial | Navigate through the file system on Jupyter Notebook and open tutorial | Local computer (Jupyter Notebook) | Navigate via clicking and once the tutorial is opened, edit and complete it as appropriate |\n",
-    "| Add and commit | `git commit -am \"[description of changes you've made]\"`  | Windows Powershell | Commit changes to file |\n",
+    "| Open, edit, and complete tutorial | Navigate through the file system on Jupyter Notebook and open tutorial | Local computer (Jupyter Notebook) | Navigate via clicking, and once the tutorial is opened, edit and complete it as appropriate |\n",
+    "| Add and commit | `git commit -am \"[description of changes you've made]\"` | Windows Powershell | Add and commit changes from local file |\n",
     "| Push | `git push` | Windows Powershell | Push changes to the PythonTutorials directory on GitHub.com|\n",
     "| Check status of git repository | `git status` | Windows Powershell | Check status of the local git repository (optional)|\n",
     "| Create PDF | Ctrl + P | Local computer (Juypter Notebook) | Make sure all code blocks are executed, and create PDF of the tutorial for submission|\n",
