--- a/tutorial_notebooks/tutorial015-Pandas-Introduction.ipynb
+++ b/tutorial_notebooks/tutorial015-Pandas-Introduction.ipynb
@@ -934,10 +934,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4dbe88e",
+   "id": "d0faeddd",
    "metadata": {},
    "source": [
-    "Because the output from the above cell is empty, there was no songs with the same song duration between my list of songs and my friends."
+    "Because the output of the above cell is empty, it means that there was no songs that had the same song duration when comparing between my list of songs and my friend's list of songs."
    ]
   },
   {
@@ -2098,7 +2098,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdc6a828",
+   "id": "c5486d60",
    "metadata": {},
    "outputs": [],
    "source": []
