--- a/tutorial_notebooks/tutorial017-Pandas-DataWranglingAutomation.ipynb
+++ b/tutorial_notebooks/tutorial017-Pandas-DataWranglingAutomation.ipynb
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b330690",
+   "id": "c379c2ca",
    "metadata": {},
    "source": [
     "$\\color{blue}{\\text{Complete the following exercise.}}$\n",
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 60,
    "id": "080eb73f",
    "metadata": {},
    "outputs": [
@@ -791,7 +791,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['wildtype', 'wildtype', 'wildtype', 'wildtype', 'wildtype', 'wildtype', 'wildtype', 'wildtype', 'wildtype', 'wildtype', 'wildtype', 'wildtype', 'wildtype', 'wildtype', 'wildtype', 'wildtype', 'wildtype', 'wildtype', 'wildtype', 'wildtype', 'mutant', 'mutant', 'mutant', 'mutant', 'mutant', 'mutant', 'mutant', 'mutant', 'mutant', 'mutant', 'mutant', 'mutant', 'mutant', 'mutant', 'mutant', 'mutant', 'mutant', 'mutant', 'mutant', 'mutant']\n"
+      "['wildtype', 'wildtype', 'wildtype', 'wildtype', 'wildtype', 'wildtype', 'wildtype', 'wildtype', 'wildtype', 'wildtype', 'wildtype', 'wildtype', 'wildtype', 'wildtype', 'wildtype', 'wildtype', 'wildtype', 'wildtype', 'wildtype', 'wildtype', 'mutant', 'mutant', 'mutant', 'mutant', 'mutant', 'mutant', 'mutant', 'mutant', 'mutant', 'mutant', 'mutant', 'mutant', 'mutant', 'mutant', 'mutant', 'mutant', 'mutant', 'mutant', 'mutant', 'mutant']\n",
+      "80\n"
      ]
     }
    ],
@@ -834,7 +835,9 @@
    "cell_type": "markdown",
    "id": "7edd8950",
    "metadata": {},
-   "source": []
+   "source": [
+    "The variable `new_length` holds an integer value (specifically in this case, 80). This value is the total number of observations or data points there are."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -848,7 +851,9 @@
    "cell_type": "markdown",
    "id": "2afc8dff",
    "metadata": {},
-   "source": []
+   "source": [
+    "The use of `new_length/2` in combination with the `if, else` statments are used to assign the appropriate strain type label. If the data point is in the first half of the dataset, it means that the strain is a wildtype, while if it's the last half of the dataset, it's a mutant. The `if, else` allows you to append the right strain label."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -882,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 61,
    "id": "b8d898fd",
    "metadata": {},
    "outputs": [],
@@ -903,12 +908,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d27feab7",
+   "cell_type": "markdown",
+   "id": "754bd90d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The variable `strain` is a pandas Series that holds the strain type labels for each of the data points/observations."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -990,7 +995,9 @@
    "cell_type": "markdown",
    "id": "849648f0",
    "metadata": {},
-   "source": []
+   "source": [
+    "The `mutants` appear at the bottom because the data points collected from the mutant rats were appended to the bottom half of the dataset. So, this order makes sure that the actual data points and the labels are matched in order when you add the two Series together to create a tidy version of the dataset. The order was decided by me, the coder. I could've have just as easily decided to add the mutant data in the beginning portion of the dataset, which would mean I would simply switch the order of the `mutant` versus the `wildtype` labels in the above cell."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1096,7 +1103,9 @@
    "cell_type": "markdown",
    "id": "dc9ace3a",
    "metadata": {},
-   "source": []
+   "source": [
+    "We created a pandas Series that contain the appropriate sex (male vs. female) label. To do so, we created a sort Series in the first line, then repeated the Series to create the first half of the dataset. Then, in the third line, we duplicated the Series and concatenated them together and reset the index to create the full Series."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1108,11 +1117,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "1497f14c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0           white\n",
+       "1           white\n",
+       "2           white\n",
+       "3           white\n",
+       "4           white\n",
+       "5           white\n",
+       "6           white\n",
+       "7           white\n",
+       "8           white\n",
+       "9           white\n",
+       "10          white\n",
+       "11          white\n",
+       "12          white\n",
+       "13          white\n",
+       "14          white\n",
+       "15          white\n",
+       "16          white\n",
+       "17          white\n",
+       "18          white\n",
+       "19          white\n",
+       "20    pearl-white\n",
+       "21    pearl-white\n",
+       "22    pearl-white\n",
+       "23    pearl-white\n",
+       "24    pearl-white\n",
+       "25    pearl-white\n",
+       "26    pearl-white\n",
+       "27    pearl-white\n",
+       "28    pearl-white\n",
+       "29    pearl-white\n",
+       "30    pearl-white\n",
+       "31    pearl-white\n",
+       "32    pearl-white\n",
+       "33    pearl-white\n",
+       "34    pearl-white\n",
+       "35    pearl-white\n",
+       "36    pearl-white\n",
+       "37    pearl-white\n",
+       "38    pearl-white\n",
+       "39    pearl-white\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numPerGroup = 20\n",
+    "unicorns = pd.Series(['white', 'pearl-white']) # create short series    \n",
+    "unicorns = unicorns.repeat(numPerGroup) # repeat series \n",
+    "unicorns = unicorns.reset_index(drop=True) # reset index\n",
+    "unicorns"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1124,11 +1190,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "8ba4bbe3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      Live Oaks\n",
+       "1      Live Oaks\n",
+       "2      Live Oaks\n",
+       "3      Live Oaks\n",
+       "4      Live Oaks\n",
+       "5      Live Oaks\n",
+       "6      Live Oaks\n",
+       "7      Live Oaks\n",
+       "8      Live Oaks\n",
+       "9      Live Oaks\n",
+       "10    White Oaks\n",
+       "11    White Oaks\n",
+       "12    White Oaks\n",
+       "13    White Oaks\n",
+       "14    White Oaks\n",
+       "15    White Oaks\n",
+       "16    White Oaks\n",
+       "17    White Oaks\n",
+       "18    White Oaks\n",
+       "19    White Oaks\n",
+       "20      Red Oaks\n",
+       "21      Red Oaks\n",
+       "22      Red Oaks\n",
+       "23      Red Oaks\n",
+       "24      Red Oaks\n",
+       "25      Red Oaks\n",
+       "26      Red Oaks\n",
+       "27      Red Oaks\n",
+       "28      Red Oaks\n",
+       "29      Red Oaks\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numPerGroup = 10 # total of 30 trees with 3 types of trees each comprising 1/3\n",
+    "Three_trees = pd.Series(['Live Oaks', 'White Oaks', 'Red Oaks']) # create short series    \n",
+    "Three_trees = Three_trees.repeat(numPerGroup) # repeat series\n",
+    "Three_trees = Three_trees.reset_index(drop=True) # reset index\n",
+    "Three_trees"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1212,11 +1325,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "42416bb7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# sample dict() with name, student ID, GPA, and major\n",
+    "student = {\n",
+    "    'name': 'Bob',\n",
+    "    'ID': 12345,\n",
+    "    'GPA': 3.5,\n",
+    "    'major': 'Anthropology'\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2360,7 +2481,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "8b346651",
+   "id": "a9610279",
    "metadata": {},
    "outputs": [
     {
@@ -2490,7 +2611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a7cdb4a",
+   "id": "5b15d7d6",
    "metadata": {},
    "outputs": [],
    "source": []
