--- a/tutorial_notebooks/tutorial016-Pandas-DataWrangling.ipynb
+++ b/tutorial_notebooks/tutorial016-Pandas-DataWrangling.ipynb
@@ -185,7 +185,9 @@
    "cell_type": "markdown",
    "id": "a524f629",
    "metadata": {},
-   "source": []
+   "source": [
+    "`Pandas` provides a multitude of readers. For example, the `.read_html()` functions allows you to read in data from an HTML file (e.g., websites), `read_excel()` allows you to read in data from an Excel file, and `.read_stata()` function allows you to read in Stata files. Both Excel and Stata are common file extensions used to store various datasets."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2520,7 +2522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 22,
    "id": "95fbda4f",
    "metadata": {},
    "outputs": [
@@ -2839,7 +2841,7 @@
        "39  24.990505   F     Mutant"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
