--- a/tutorial_notebooks/tutorial016-Pandas-DataWrangling.ipynb
+++ b/tutorial_notebooks/tutorial016-Pandas-DataWrangling.ipynb
@@ -2109,7 +2109,7 @@
    "id": "afbabec6",
    "metadata": {},
    "source": [
-    "The cell above created a new dataframe that includes whether a rat is a wild type of mutant strain. This was done to separately store the sex and strain type of the rats in the new dataframe (unlike the original dataframe which included one column that coded for both sex and strain type). This change makes it easier later when we are trying to analyze/plot/compare between the two strains, regardless of sex."
+    "The cell above created a new dataframe that includes whether a rat is a wild type or a mutant strain. This was done to separately store the sex and strain type of the rats in the new dataframe (unlike the original dataframe which included one column that coded for both sex and strain type). This change makes it easier later when we are trying to analyze/plot/compare between the two strains, regardless of sex."
    ]
   },
   {
